Add correct urls to head tag

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     />
     <meta
       property="og:image"
-      content="https://viktorcoding.com/img/viktormauzer-dev-portfolio.png"
+      content="https://viktormauzer.github.io/img/viktormauzer-dev-portfolio.png"
     />
-    <meta property="og:url" content="https://viktorcoding.com/" />
+    <meta property="og:url" content="https://viktormauzer.github.io/" />
     <meta
       property="og:site_name"
       content="Portfolio - Viktor Mauzer, iOS Developer"
