--- a/privacy.html
+++ b/privacy.html
@@ -21,9 +21,12 @@
     />
     <meta
       property="og:image"
-      content="https://viktorcoding.com/img/viktormauzer-dev-portfolio.png"
+      content="https://viktormauzer.github.io/img/viktormauzer-dev-portfolio.png"
     />
-    <meta property="og:url" content="https://viktorcoding.com/about.html" />
+    <meta
+      property="og:url"
+      content="https://viktormauzer.github.io/privacy.html"
+    />
     <meta
       property="og:site_name"
       content="Portfolio - Viktor Mauzer, iOS Developer"
