--- a/portfolio/open-weather.html
+++ b/portfolio/open-weather.html
@@ -23,9 +23,12 @@
     />
     <meta
       property="og:image"
-      content="https://viktorcoding.com/img/open-weather/openweather-share-img.png"
+      content="https://viktormauzer.github.io/img/open-weather/openweather-share-img.png"
     />
-    <meta property="og:url" content="https://viktorcoding.com/about.html" />
+    <meta
+      property="og:url"
+      content="https://viktormauzer.github.io/portfolio/open-weather.html"
+    />
     <meta
       property="og:site_name"
       content="Portfolio - Viktor Mauzer, iOS Developer"
