add stranger chats app to homepage

--- a/index.html
+++ b/index.html
@@ -135,6 +135,34 @@
       <img src="img/decoration/ios.png" alt="ios" class="ios__image" />
     </section>
 
+    <section class="stranger__chats">
+      <div class="stranger__chats-info">
+        <h2>Stranger Chats</h2>
+        <p>
+          A Firebase programmatic UIKit chat app for people who have strange
+          friends. Users can register their account, login, add friends via
+          their email address, add their friends' profile image and chat. All
+          data is synced to the Firebase Firestore database.
+        </p>
+        <div class="stranger__chats-cta">
+          <a
+            aria-label="Github"
+            rel="noreferrer noopener"
+            target="_blank"
+            href="https://github.com/viktormauzer/Stranger-Chats.git"
+            class="github__button button button-white no__highlights"
+          >
+            <svg class="github__button-icon button-icon">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
+            </svg>
+            <svg class="github__button-icon button-icon">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
     <section class="open__weather">
       <div class="open__weather-info">
         <h2>OpenWeather</h2>
