add visual improvements, colors and assets

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="apple-touch-icon" href="img/apple-icon.png" />
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.png" />
 
-    <link rel="stylesheet" href="style.css?v=1.1" />
+    <link rel="stylesheet" href="style.css?v=1.2" />
     <title>Portfolio - Viktor Mauzer, iOS Developer</title>
   </head>
   <body ontouchstart="">
@@ -178,22 +178,18 @@
             rel="noreferrer noopener"
             target="_blank"
             href="https://github.com/viktormauzer/openweather-UIKit"
-            class="github__button button button-white no__highlights"
+            class="github__button button button-dark no__highlights"
           >
-            <svg
-              class="github__button-icon open__weather-button-icon button-icon"
-            >
+            <svg class="github__button-icon button-icon-light">
               <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
             </svg>
-            <svg
-              class="github__button-icon open__weather-button-icon button-icon"
-            >
+            <svg class="github__button-icon button-icon-light">
               <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
             </svg>
           </a>
           <a
             href="/portfolio/open-weather.html"
-            class="button button-hollow-white no__highlights"
+            class="button button-hollow-dark no__highlights"
             >more info</a
           >
         </div>
