add stranger chats details page to portfolio

--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@
           <span>Portfolio</span>
           <ul>
             <li>
+              <a class="header__nav-link" href="/portfolio/stranger-chats.html"
+                >Stranger Chats</a
+              >
+            </li>
+            <li>
               <a class="header__nav-link" href="/portfolio/open-weather.html"
                 >OpenWeather</a
               >
