--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
           <span>Portfolio</span>
           <ul>
             <li>
+              <a class="header__nav-link" href="/portfolio/stranger-chats.html"
+                >Stranger Chats</a
+              >
+            </li>
+            <li>
               <a class="header__nav-link" href="/portfolio/open-weather.html"
                 >OpenWeather</a
               >
@@ -149,7 +154,7 @@
             aria-label="Github"
             rel="noreferrer noopener"
             target="_blank"
-            href="https://github.com/viktormauzer/Stranger-Chats.git"
+            href="https://github.com/viktormauzer/Stranger-Chats"
             class="github__button button button-white no__highlights"
           >
             <svg class="github__button-icon button-icon">
@@ -159,6 +164,11 @@
               <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
             </svg>
           </a>
+          <a
+            href="/portfolio/stranger-chats.html"
+            class="button button-white no__highlights"
+            >more info</a
+          >
         </div>
       </div>
     </section>
