--- a/portfolio/open-weather.html
+++ b/portfolio/open-weather.html
@@ -53,6 +53,11 @@
           <span>Portfolio</span>
           <ul>
             <li>
+              <a class="header__nav-link" href="/portfolio/stranger-chats.html"
+                >Stranger Chats</a
+              >
+            </li>
+            <li>
               <a class="header__nav-link" href="/portfolio/open-weather.html"
                 >OpenWeather</a
               >
@@ -102,7 +107,7 @@
     </header>
 
     <section class="portfolio__item">
-      <div class="portfolio__item-img">&nbsp;</div>
+      <div class="portfolio__item-img open__weather-img">&nbsp;</div>
       <div class="portfolio__item-container">
         <div class="portfolio__item-heading">
           <h1>OpenWeather</h1>
