fix stranger chats page og title and css in article link colors

--- a/portfolio/stranger-chats.html
+++ b/portfolio/stranger-chats.html
@@ -15,7 +15,7 @@
 
     <meta
       property="og:title"
-      content="OpenWeather - Viktor Mauzer, iOS Developer"
+      content="Stranger Chats - Viktor Mauzer, iOS Developer"
     />
     <meta
       property="og:description"
