Add StayFitShop to Portfolio

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
           <span>Portfolio</span>
           <ul>
             <li>
+              <a class="header__nav-link" href="/portfolio/stayfitshop.html"
+                >StayFitShop</a
+              >
+            </li>
+            <li>
               <a class="header__nav-link" href="/portfolio/stranger-chats.html"
                 >Stranger Chats</a
               >
@@ -122,7 +127,7 @@
       <div class="hero__text">
         <span class="hero__text-intro">Hi, I'm</span>
         <h1>Viktor Mauzer</h1>
-        <span class="hero__text-desc">iOS Developer</span>
+        <span class="hero__text-desc">SWIFT iOS Developer</span>
         <img
           src="img/decoration/line-dots.png"
           alt="line-dots"
@@ -138,6 +143,103 @@
         </div>
       </div>
       <img src="img/decoration/ios.png" alt="ios" class="ios__image" />
+    </section>
+
+    <section class="stayfitshop">
+      <div class="stayfitshop__slider slider">
+        <div class="slider__next slider__btn no__highlights">
+          <svg class="slider__next-icon slider__icon">
+            <use xlink:href="/icons/sprite.svg#vector-arrow"></use>
+          </svg>
+        </div>
+        <div class="slider__prev slider__btn no__highlights">
+          <svg class="slider__prev-icon slider__icon">
+            <use xlink:href="/icons/sprite.svg#vector-arrow"></use>
+          </svg>
+        </div>
+        <div class="stayfitshop__slider-container slider-container">
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Latest.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Popular.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Cart.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Profile.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Search.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Product.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Product2.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+          <img
+            class="slide lazy-img"
+            data-src="img/stay-fit-shop/Checkout.png"
+            src="img/open-weather/lazy.png"
+            alt="slide"
+          />
+        </div>
+        <div class="slider__indicator"></div>
+      </div>
+      </div>
+      <div class="stayfitshop__info">
+        <h2>StayFitShop</h2>
+        <p>
+          Made using SwiftUI, StayFitShop is a shopping application that enables
+          users to browse and search products downloaded from the server and
+          cached using Core Data Framework, add them to Cart, create their user
+          profile and Checkout.
+        </p>
+        <div class="stayfitshop__cta">
+          <a
+            aria-label="Github"
+            rel="noreferrer noopener"
+            target="_blank"
+            href="https://github.com/viktormauzer/StayFitShop"
+            class="github__button button button-dark no__highlights"
+          >
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo"></use>
+            </svg>
+            <svg class="github__button-icon button-icon-light">
+              <use xlink:href="/icons/sprite.svg#vector-github-logo-text"></use>
+            </svg>
+          </a>
+          <a
+            href="/portfolio/stayfitshop.html"
+            class="button button-hollow-dark no__highlights"
+            >more info</a
+          >
+        </div>
+      </div>
     </section>
 
     <section class="stranger__chats">
