--- a/about.html
+++ b/about.html
@@ -52,6 +52,11 @@
           <span>Portfolio</span>
           <ul>
             <li>
+              <a class="header__nav-link" href="/portfolio/stayfitshop.html"
+                >StayFitShop</a
+              >
+            </li>
+            <li>
               <a class="header__nav-link" href="/portfolio/stranger-chats.html"
                 >Stranger Chats</a
               >
