--- a/portfolio/stayfitshop.html
+++ b/portfolio/stayfitshop.html
@@ -21,8 +21,9 @@
       property="og:description"
       content="Made using SwiftUI, StayFitShop is a shopping application that enables users to browse and search products downloaded from the server and cached using Core Data Framework"
     />
-    <meta property="og:image"
-    content="https://viktormauzer.github.io/img/stay-fit-shop/social-share.jpg
+    <meta
+      property="og:image"
+      content="https://viktormauzer.github.io/img/stay-fit-shop/social-share.jpg"
     />
     <meta
       property="og:url"
@@ -172,9 +173,10 @@
             dummy data just to have something to download from the server. The
             images for this app are all from Pixabay and Unsplash which are free
             resources and you can check out their licence information here:
-            <a href="https://pixabay.com/licence">Pixabay licence</a> and here:
-            <a href="https://unsplash.com/licence">Unsplash</a>. Users cannot
-            actually purchase these products and the ordering works using
+            <a href="https://pixabay.com/service/license/">Pixabay license</a>
+            and here:
+            <a href="https://unsplash.com/license">Unsplash License</a>. Users
+            cannot actually purchase these products and the ordering works using
             <a href="https://reqres.in">Reqres</a> service which upon successful
             POST request, returns the request back as is. I needed something to
             accept request and return data back so I can simulate an ordering
