Add new profile picture

--- a/about.html
+++ b/about.html
@@ -110,11 +110,7 @@
 
     <section class="about">
       <div class="about__sidebar">
-        <img
-          class="about__profile"
-          src="img/profile-pic-round.png"
-          alt="profile"
-        />
+        <img class="about__profile" src="img/profile-pic.jpg" alt="profile" />
         <span>Viktor Mauzer</span>
         <a
           class="button button-dark no__highlights"
