Add CV pdf +Minor style changes

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       content="Portfolio - Viktor Mauzer, iOS Developer"
     />
 
-    <link rel="stylesheet" href="style.css?v=1.5" />
+    <link rel="stylesheet" href="style.css?v=1.6" />
     <title>About - Viktor Mauzer, iOS Developer</title>
   </head>
   <body ontouchstart="">
@@ -95,6 +95,16 @@
               </a>
             </li>
             <li>
+              <a
+                class="button button-white no__highlights"
+                rel="noreferrer noopener"
+                target="_blank"
+                href="https://viktormauzer.github.io/files/ViktorMauzerCV.pdf"
+              >
+                Download CV
+              </a>
+            </li>
+            <li>
               <div class="button send-email button-white no__highlights">
                 <svg class="button-icon">
                   <use xlink:href="/icons/sprite.svg#vector-mail"></use>
@@ -123,6 +133,11 @@
           </svg>
           Twitter
         </a>
+        <a
+          href="https://viktormauzer.github.io/files/ViktorMauzerCV.pdf"
+          class="button button-dark no__highlights"
+          >Download CV</a
+        >
         <div class="button send-email button-dark no__highlights">
           <svg class="button-icon">
             <use xlink:href="/icons/sprite.svg#vector-mail"></use>
@@ -167,7 +182,7 @@
 
     <footer class="footer">
       <div class="footer__content">
-        <span>All rights reserved</span>
+        <a href="about.html">About/Contact</a>
         <a href="privacy.html">Privacy</a>
       </div>
     </footer>
