--- a/portfolio/open-weather.html
+++ b/portfolio/open-weather.html
@@ -35,7 +35,7 @@
     />
 
     <link rel="shortcut icon" type="image/jpg" href="../img/favicon.png" />
-    <link rel="stylesheet" href="../style.css?v=1.5" />
+    <link rel="stylesheet" href="../style.css?v=1.6" />
     <title>OpenWeather - Viktor Mauzer, iOS Developer</title>
   </head>
   <body ontouchstart="">
@@ -95,6 +95,16 @@
                   <use xlink:href="/icons/sprite.svg#vector-twitter"></use>
                 </svg>
                 Twitter
+              </a>
+            </li>
+            <li>
+              <a
+                class="button button-white no__highlights"
+                rel="noreferrer noopener"
+                target="_blank"
+                href="https://viktormauzer.github.io/files/ViktorMauzerCV.pdf"
+              >
+                Download CV
               </a>
             </li>
             <li>
@@ -256,7 +266,7 @@
 
     <footer class="footer">
       <div class="footer__content">
-        <span>All rights reserved</span>
+        <a href="../about.html">About/Contact</a>
         <a href="../privacy.html">Privacy</a>
       </div>
     </footer>
