Add slider app to homepage

--- a/index.html
+++ b/index.html
@@ -404,9 +404,25 @@
               <a aria-label="Github"
               rel="noreferrer noopener"
               target="_blank" href="https://github.com/viktormauzer/FriendFaceChallenge" class="text__button">GitHub</a>
-              <a aria-label="Github"
+              <a aria-label="Medium"
               rel="noreferrer noopener"
               target="_blank" href="https://medium.com/@viktormauzer/solving-friendface-100daysofswiftui-challenge-day-60-61-754309014448" class="text__button">Medium</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="moreApps__item">
+          <div class="moreApps__item-logo">
+            <img src="img/the-slider/app-icon-thumbnail.png" alt="FriendFaceLogo">
+          </div>
+          <div class="moreApps__item-info">
+            <h4>TheSlider</h4>
+            <p>A simple content slider built using SwiftUI with the help of TabView and its custom TabViewStyle. with my own custom index display.</p>
+            <div class="separator dark-bg">&nbsp;</div>
+            <div class="moreApps__item-buttons">
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" href="https://github.com/viktormauzer/TheSlider" class="text__button">GitHub</a>
             </div>
           </div>
         </div>
