--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
           </div>
           <div class="moreApps__item-info">
             <h4>TheSlider</h4>
-            <p>A simple content slider built using SwiftUI with the help of TabView and its custom TabViewStyle. with my own custom index display.</p>
+            <p>A simple content slider built using SwiftUI with the help of TabView and its custom TabViewStyle with my own custom index display.</p>
             <div class="separator dark-bg">&nbsp;</div>
             <div class="moreApps__item-buttons">
               <a aria-label="Github"
