--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
         <div class="moreApps__item">
           <div class="moreApps__item-logo">
-            <img src="img/the-slider/app-icon-thumbnail.png" alt="FriendFaceLogo">
+            <img src="img/the-slider/app-icon-thumbnail.png" alt="TheSliderLogo">
           </div>
           <div class="moreApps__item-info">
             <h4>TheSlider</h4>
@@ -423,6 +423,22 @@
               <a aria-label="Github"
               rel="noreferrer noopener"
               target="_blank" href="https://github.com/viktormauzer/TheSlider" class="text__button">GitHub</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="moreApps__item">
+          <div class="moreApps__item-logo">
+            <img src="img/side-menu/side-menu-icon-thumb.png" alt="SidemenuLogo">
+          </div>
+          <div class="moreApps__item-info">
+            <h4>SideMenu</h4>
+            <p>UIKit based side menu feature built using storyboards (xib files) showcased in an "email-like" app.</p>
+            <div class="separator dark-bg">&nbsp;</div>
+            <div class="moreApps__item-buttons">
+              <a aria-label="Github"
+              rel="noreferrer noopener"
+              target="_blank" href="https://github.com/viktormauzer/SideMenu" class="text__button">GitHub</a>
             </div>
           </div>
         </div>
