Improve visuals on hero section and update CSS

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="apple-touch-icon" href="img/apple-icon.png" />
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.png" />
 
-    <link rel="stylesheet" href="style.css?v=1.6" />
+    <link rel="stylesheet" href="style.css?v=1.7" />
     <title>Portfolio - Viktor Mauzer, iOS Developer</title>
   </head>
   <body ontouchstart="">
@@ -124,27 +124,13 @@
         alt="grid-dots"
         class="grid__dots"
       />
-      <img
-        src="img/decoration/p-figure-large.png"
-        alt="p-figure-large"
-        class="p__figure-large"
-      />
-      <img
-        src="img/decoration/p-figure-small.png"
-        alt="p-figure-small"
-        class="p__figure-small"
-      />
+      <div class="decoration__element">&nbsp;</div>
+      <div class="decoration__element2">&nbsp;</div>
       <div class="hero__info">
         <img class="hero__info-img" src="img/profile-pic.jpg" alt="profile__photo">
         <div class="hero__text">
-          <span class="hero__text-intro">Hi, I'm</span>
           <h1>Viktor Mauzer</h1>
           <span class="hero__text-desc">SWIFT iOS Developer</span>
-          <img
-            src="img/decoration/line-dots.png"
-            alt="line-dots"
-            class="line__dots"
-          />
         </div>
       </div>
       <div class="hero__cta">
